@@ -534,7 +534,7 @@ public:
   //bool writeROOT(std::ostream & os, std::string path, std::string name) {
   bool writeROOT(TFile* file, std::string path, std::string name) {
 
-    std::cout << "Writing out profile histogram " << name.c_str() << " in ROOT file format" << std::endl;
+    //std::cout << "Writing out profile histogram " << name.c_str() << " in ROOT file format" << std::endl;
 
     TProfile* prof1d;
     int nbins;
