@@ -11,6 +11,7 @@
 
 namespace Rivet {
 
+
   template < typename T, typename C > 
   class IsolationEstimator {
 
@@ -37,28 +38,29 @@ namespace Rivet {
       }
   };
 
-  //an estimator for the sum of the pt of the particles in collection C
-  //being within radius from t
+
+  // An estimator for the sum of the pt of the particles in collection C
+  // being within radius from t
   template < class T, class C > 
   class PtInConeEstimator : public IsolationEstimator < T, C > {
   public:
-    PtInConeEstimator(double radius, double ptmin = 0.0):_radius(radius), _ptmin(ptmin) { }
+    PtInConeEstimator(double radius, double ptmin = 0.0)
+      : _radius(radius), _ptmin(ptmin) { }
 
     virtual double estimate(const T & t, const C & c) const {
       double ptsum = 0;
       for (typename C::const_iterator ic = c.begin(); ic != c.end(); ++ic) {
-        if (ic->getMomentum().pT() < _ptmin)
+        if (ic->momentum().pT() < _ptmin)
           continue;
-        if (deltaR(t.getMomentum(), ic->getMomentum()) < _radius) {
-          ptsum += ic->getMomentum().pT();
+        if (deltaR(t.momentum(), ic->momentum()) < _radius) {
+          ptsum += ic->momentum().pT();
         }
       }
-      //return ptsum; 
-      return ptsum / t.getMomentum().pT(); //modified 12-03-2008
+      return ptsum / t.momentum().pT();
     }
 
     virtual int compare(const IsolationEstimator < T, C > *other) const {
-      const PtInConeEstimator *concreteother = dynamic_cast < const PtInConeEstimator * >(other);
+      const PtInConeEstimator *concreteother = dynamic_cast<const PtInConeEstimator*>(other);
       int ptmincmp = cmp(_ptmin, concreteother->getPtMin());
       if (ptmincmp != 0)
          return ptmincmp;
@@ -68,11 +70,11 @@ namespace Rivet {
        return 0;
     } 
     
-    double getRadius() const {
+    double radius() const {
       return _radius;
     } 
     
-    double getPtMin() const {
+    double ptMin() const {
       return _ptmin;
     } 
   private:
@@ -80,19 +82,21 @@ namespace Rivet {
     double _ptmin;
   };
 
-  //an estimator for the number of particles in collection C
-  //being within radius from t
+
+  // An estimator for the number of particles in collection C
+  // being within radius from t
   template < class T, class C > 
   class MultiplicityInConeEstimator : public IsolationEstimator < T, C > {
   public:
-    MultiplicityInConeEstimator(double radius, double ptmin = 0.0):_radius(radius), _ptmin(ptmin) { } 
+    MultiplicityInConeEstimator(double radius, double ptmin = 0.0)
+      : _radius(radius), _ptmin(ptmin) {  }
     
     virtual double estimate(const T & t, const C & c) const {
       double npart = 0;
       for (typename C::const_iterator ic = c.begin(); ic != c.end(); ++ic) {
         if (ic->momentum().pT() < _ptmin)
           continue;
-        if (deltaR(t.getMomentum(), ic->momentum()) < _radius) {
+        if (deltaR(t.momentum(), ic->momentum()) < _radius) {
           npart++;
         }
       } 
@@ -110,11 +114,11 @@ namespace Rivet {
        return 0;
     } 
     
-    double getRadius() const {
+    double radius() const {
       return _radius;
     } 
     
-    double getPtMin() const {
+    double ptMin() const {
       return _ptmin;
     } 
     
@@ -124,7 +128,7 @@ namespace Rivet {
   };
 
 
-  ///typedefs...
+  /// Typedefs
   typedef MultiplicityInConeEstimator < Jet, std::vector < Jet > >JetIsoEstimatorByMultiplicity;
   typedef MultiplicityInConeEstimator < Particle, std::vector < Jet > >ParticleFromJetIsoEstimatorByMultiplicity;
   typedef MultiplicityInConeEstimator < Particle, std::vector < Particle > >ParticleIsoEstimatorByMultiplicity;
@@ -132,39 +136,11 @@ namespace Rivet {
   typedef PtInConeEstimator < Jet, std::vector < Jet > >JetIsoEstimatorByPt;
   typedef PtInConeEstimator < Particle, std::vector < Jet > >ParticleFromJetIsoEstimatorByPt;
   typedef PtInConeEstimator < Particle, std::vector < Particle > >ParticleIsoEstimatorByPt;
-/*
-  template <typename TYPE1, typename TYPE2> struct isohelper {
-            typedef IsolationEstimator<TYPE1, std::vector<TYPE2> > estimatorhelper;
-  };
-*/
   template <typename TYPE1, typename TYPE2> struct isohelper {
             typedef IsolationEstimator<TYPE1, TYPE2> estimatorhelper;
   };
+
  
 }
-/*
-namespace std {
-  template < typename T, typename C >
-  struct less <const Rivet::IsolationEstimator < T, C >& >:
-  public binary_function < const Rivet::IsolationEstimator < T, C >&, const Rivet::IsolationEstimator < T, C >&, bool > 
-  {
-    bool operator() (const Rivet::IsolationEstimator < T, C >& x, const Rivet::IsolationEstimator < T, C >& y) const {
-      cout << "Calling less ()" << endl; 
-      return x.before(&y);
-    }
-  };
-*/
-/*
-namespace std {
-  template <typename TYPE1, typename TYPE2 > 
-  struct less <const typename Rivet::isohelper<TYPE1, TYPE2>::estimatorhelper* >
-  {
-    bool operator() (const typename Rivet::isohelper<TYPE1, TYPE2>::estimatorhelper* x, 
-                     const typename Rivet::isohelper<TYPE1, TYPE2>::estimatorhelper* y) const {
-      cout << "Calling less ()" << endl;
-      return x->before(y);
-    }
-  };
 
-}*/
 #endif
